--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "codice-fiscale": "^0.0.5",
-    "codice-fiscale-js": "^2.3.20",
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "sqlite3": "^5.1.6",
     "web-vitals": "^2.1.4"
